# WolfQuant

./: .env.example  .gitignore  RUN.md  package.json  pnpm-lock.yaml  vite.config.ts
doc/: 1.md
src/: App.vue  main.ts
src-tauri/: .taurignore  Cargo.toml  Config.toml  tauri.conf.json
src-tauri/data/: wolfquant.db
src-tauri/src/: auth.rs  config.rs  database.rs  email.rs  error.rs  logger.rs  main.rs  models.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/crypto/: binance.rs  mod.rs  okex.rs
src-tauri/src/adapters/fund/: mod.rs  sina.rs  tiantian.rs
src-tauri/src/adapters/gold/: mod.rs
src-tauri/src/adapters/stock/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/backtest/: backtester.rs  importer.rs  mod.rs
src-tauri/src/commands/: asset.rs  auth.rs  backtest.rs  backtester.rs  data.rs  import.rs  importer.rs  investment_plan.rs  market.rs  mod.rs  strategy.rs  transaction.rs
src-tauri/src/config/: config.rs  mod.rs
src-tauri/src/core/: engine.rs  event.rs  mod.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/database/schema/: asset_tables.rs  backtester_tables.rs  candles_tables.rs  importer_tables.rs  strategy_tables.rs  transaction_tables.rs  user_tables.rs
src-tauri/src/db/: repository.rs
src-tauri/src/error/: auth.rs  mod.rs
src-tauri/src/market/: adapter.rs  candle.rs  mod.rs  ticker.rs
src-tauri/src/middleware/: auth.rs
src-tauri/src/models/: adapter.rs  asset.rs  asset_type.rs  auth.rs  backtester.rs  candle.rs  dataset.rs  engine.rs  event.rs  import.rs  import_task.rs  investment_plan.rs  investment_strategy.rs  mod.rs  models.rs  order.rs  portfolio.rs  price_history.rs  strategy.rs  ticker.rs  trade_alert.rs  trader.rs  trading.rs  transaction.rs  user.rs  user_group.rs
src-tauri/src/sercives/: asset.rs  investment_plan.rs
src-tauri/src/services/: asset.rs  auth.rs  backtester.rs  candle.rs  data.rs  import_task.rs  importer.rs  investment_plan.rs  mod.rs  strategy.rs  transaction.rs  verification.rs  verifications.rs
src-tauri/src/src/strategy/: mod.rs
src-tauri/src/strategy/: strategy.rs
src-tauri/src/strategy/indicators/: ma.rs  macd.rs  mod.rs  rsi.rs
src-tauri/src/trading/: mod.rs  order.rs  portfolio.rs  trader.rs
src-tauri/src/utils/: crypto.rs  email.rs  logging.rs  mod.rs
src/assets/icons/: AboutIcon.vue  AlertsIcon.vue  ClipboardIcon.vue  (+14 more)
src/components/: EmptyTab.vue  ForgotPasswordModal.vue  MarketWatchlist.vue  SettingsModal.vue  SideNavigation.vue  TabItem.vue  ThemeProvider.vue  TradingView.vue  UserMenu.vue  UserProfile.vue
src/router/: index.ts
src/services/: auth-service.ts  theme-service.ts
src/stores/: assetStore.ts  importStore.ts  investmentPlan.ts  marketStore.ts  tabStore.ts  themeStore.ts  userStore.ts
src/styles/: common.css  components.css  theme.ts  transitions.scss  variables.css
src/types/: index.ts
src/views/: Home.vue
(+45 files in other folders)
