[package]
name = "wolfquant"
version = "0.1.0"
description = "WolfQuant Trading Platform"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
argon2 = "0.5.0"
rand = "0.8.5"
toml = "0.7.6"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"

[features]
# 默认情况下，使用自定义协议
# 这是推荐的设置，但在开发过程中，您可能希望使用 http 协议
# https://tauri.app/v1/api/config/#buildconfig.beforedevcommand
custom-protocol = ["tauri/custom-protocol"]