[package]
name = "wolfquant"
version = "0.1.0"
description = "WolfQuant Trading Platform"
authors = ["caster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
argon2 = "0.5.0"
rand = "0.8.5"
toml = "0.7.6"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
rusqlite = "0.35.0" 
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "full"] }
reqwest = {version = "0.12.15",features = ["json"] }
async-trait = "0.1.88"
jsonwebtoken = "9.3.1"


[features]
# 默认情况下，使用自定义协议
# 这是推荐的设置，但在开发过程中，您可能希望使用 http 协议
# https://tauri.app/v1/api/config/#buildconfig.beforedevcommand
custom-protocol = ["tauri/custom-protocol"]
